--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0,user-scalable=no" />
+    <meta name="viewport" content="height=device-height, 
+    width=device-width, initial-scale=1.0, 
+    minimum-scale=1.0, maximum-scale=1.0, 
+    user-scalable=no, target-densitydpi=device-dpi"/>
     <meta name="theme-color" content="#000000" />
     <meta
       name="Mike Guggenbuehl Portfolio"
